--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^9.1.2",
@@ -28,17 +29,26 @@
     "@storybook/react-webpack5": "^9.1.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "storybook": "^9.1.2",
-    "typescript": "^5.9.2",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "prettier": "^3.3.3"
+    "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.3.3",
+    "storybook": "^9.1.2",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2"
   }
 }
