--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,css,json,md}\"",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test:stories": "storybook test --watch=false",
+  "test:stories:watch": "storybook test --watch",
+  "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +30,12 @@
     "@storybook/addon-onboarding": "^9.1.2",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/react-webpack5": "^9.1.2",
+    "@storybook/test": "9.0.0-alpha.2",
+    "@storybook/test-runner": "^0.23.0",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/styled-components": "^5.1.34",
@@ -43,12 +52,15 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^16.3.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "storybook": "^9.1.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.12",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
   }
 }
