--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "noImplicitOverride": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+  "noFallthroughCasesInSwitch": true,
+  "isolatedModules": true
+  ,"types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["src"],
   "exclude": ["dist", "node_modules", "stories"]
