--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "build:lib": "npm run clean && tsc -p tsconfig.json",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,css,json,md}\"",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test:stories": "storybook test --watch=false",
-  "test:stories:watch": "storybook test --watch",
-  "test": "jest --passWithNoTests"
+    "start": "storybook dev -p 6006",
+    "build": "storybook build",
+  "storybook:build-static": "rimraf storybook-static && storybook build",
+  "storybook:serve-static": "npx http-server storybook-static -p 6006",
+  "storybook:test-static": "pnpm run storybook:build-static && start-server-and-test storybook:serve-static http://localhost:6006 test:stories:runner",
+    "test:stories": "start-server-and-test storybook http://localhost:6006 test:stories:runner",
+  "test:stories:runner": "test-storybook --ci --url http://localhost:6006",
+    "test:stories:watch": "test-storybook --watch",
+    "test": "pnpm run lint && pnpm run type-check && jest"
   },
   "keywords": [],
   "author": "",
@@ -22,23 +26,22 @@
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19"
+  "react-dom": "^19.1.1",
+  "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^9.1.2",
-    "@storybook/addon-onboarding": "^9.1.2",
-    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
-    "@storybook/react-webpack5": "^9.1.2",
-    "@storybook/test": "9.0.0-alpha.2",
-    "@storybook/test-runner": "^0.23.0",
+    "@storybook/addon-docs": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
+    "@storybook/react-webpack5": "^8.4.7",
+    "@storybook/test": "^8.6.14",
+    "@storybook/test-runner": "^0.20.0",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.21",
@@ -50,17 +53,19 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^16.3.0",
+    "http-server": "^14.1.1",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
-    "storybook": "^9.1.2",
+    "start-server-and-test": "^2.0.8",
+    "storybook": "^8.4.7",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.12",
     "ts-jest": "^29.4.1",
-    "typescript": "^5.9.2"
+  "typescript": "^5.9.2",
+  "@types/styled-components": "^5.1.34"
   }
 }
