--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-  "module": "NodeNext",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "declaration": true,
     "declarationMap": true,
@@ -16,9 +16,9 @@
     "noImplicitOverride": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-  "noFallthroughCasesInSwitch": true,
-  "isolatedModules": true
-  ,"types": ["jest", "@testing-library/jest-dom"]
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true,
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["src"],
   "exclude": ["dist", "node_modules", "stories"]
