chore: auto commit after successful build

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,css,json,md}\"",
     "start": "storybook dev -p 6006",
-    "build": "storybook build",
+    "build": "storybook build && pnpm postbuild:autocommit",
+  "postbuild:autocommit": "git add . && git diff --cached --quiet && echo No changes to commit || (git commit -m \"chore: auto commit after successful build\" && git push origin HEAD)",
   "storybook:build-static": "rimraf storybook-static && storybook build",
   "storybook:serve-static": "npx http-server storybook-static -p 6006",
   "storybook:test-static": "pnpm run storybook:build-static && start-server-and-test storybook:serve-static http://localhost:6006 test:stories:runner",
