--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/addon-test": "0.0.0-pr-30727-sha-fe615277",
-    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
-    "@storybook/react-webpack5": "^8.4.7",
-    "@storybook/test": "^8.6.14",
-    "@storybook/test-runner": "^0.20.0",
+    "@storybook/addon-docs": "^9.1.2",
+    "@storybook/addon-onboarding": "^9.1.2",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/react-webpack5": "^9.1.2",
+    "@storybook/test-runner": "^0.23.0",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -64,10 +62,11 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.8",
-    "storybook": "^8.4.7",
+    "storybook": "^9.1.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.12",
     "ts-jest": "^29.4.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "eslint-plugin-storybook": "9.1.2"
   }
 }
